k8s/l3gl-devops.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-api
  namespace: devops-l3gl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-api
  template:
    metadata:
      labels:
        app: product-api
    spec:
      containers:
        - name: product-api
          image: serignef244/product-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8086
          resources:
            requests:
              cpu: 200m
              memory: 250Mi
            limits:
              cpu: 400m
              memory: 500Mi
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8086
            initialDelaySeconds: 600
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8086
            initialDelaySeconds: 60
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: product-api
  namespace: devops-l3gl
spec:
  type: ClusterIP
  ports:
    - port: 8086
      targetPort: 8086
  selector:
    app: product-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-api-ingress
  namespace: devops-l3gl
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - path: /l3gl(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: product-api
                port:
                  number: 8086
